Removed testfile.txt. Changed background to orange.

--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -6,17 +6,17 @@
       :css
         body {
           color: #ffffff;
-          background-color: #007f3f;
+          background-color: #FFA500;
           font-family: Arial, sans-serif;
           font-size: 14px;
         }
-        
+
         h1 {
           font-size: 500%;
           font-weight: normal;
           margin-bottom: 0;
         }
-        
+
         h2 {
           font-size: 200%;
           font-weight: normal;
