--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -6,7 +6,7 @@
       :css
         body {
           color: #ffffff;
-          background-color: #7D1B7E;
+          background-color: #2B65EC;
           font-family: Arial, sans-serif;
           font-size: 14px;
         }
